# Passport-Gooyoit

./: .gitignore  DEPLOY.md  INTEGRATION.md  README.md
backend/admin/: .env.example  pyproject.toml
backend/admin/app/: config.py  deps.py  main.py  models.py  schemas.py
backend/admin/app/api/: app_detail.py  applications.py  auth.py  config.py  users.py
backend/admin/app/db/: session.py
backend/admin/app/services/: applications.py  passport.py  permissions.py
backend/admin/tests/: test_admin_api.py  test_permissions.py
backend/login/: .env.example  alembic.ini  pyproject.toml
backend/login/app/: __init__.py  deps.py  main.py  models.py  schemas.py
backend/login/app/api/: auth.py  health.py  oauth.py
backend/login/app/core/: config.py  logging.py  redis.py  security.py
backend/login/app/db/: session.py
backend/login/app/services/: applications.py  auth.py  captcha.py  email.py  oauth_providers.py  permissions.py  rate_limit.py  sso.py  webauthn_service.py
backend/login/docs/: oauth-providers.md  roadmap.md  spec.md  需求文档.md
backend/login/migrations/: env.py  seed_admin.py
backend/login/migrations/versions/: 0001_initial.py  0002_add_user_password.py  0003_add_indexes.py  0004_email_code_indexes.py  0005_webauthn_credentials.py
backend/login/tests/: conftest.py  test_auth_flow.py  test_permissions.py  test_rate_limit.py  test_security.py
frontend/admin/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/admin/src/: App.tsx  index.css  types.ts
frontend/admin/src/components/: ui.tsx
frontend/login/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/login/src/: main.tsx  styles.css
(+22 files in other folders)
